--- a/views/owner_home.ejs
+++ b/views/owner_home.ejs
@@ -55,25 +55,23 @@
 
     </div>
 
-    <!-- Modal -->
+    <!-- Travels Modal -->
     <div class="modal fade" id="details" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
       <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content"  style="border-radius: 25px;">
           <div class="modal-header">
-            <h5 class="modal-title"" id="details_title">Detalle</h5>
+            <h5 class="modal-title"" style="text-align: left;" id="details_title"><strong>Detalle</strong></h5>
           </div>
-          <div class="modal-body">
+          <div class="modal-body" style="text-align: left;">
             <h6 id="value"></h6>
             <h6 id="gain"></h6>
-            <h6><strong>Gastos</strong></h6>
-            <table class="table table-responsive">
+            <h6 style="text-align: center;"><strong>Gastos</strong></h6>
+            <table class="table table-responsive" style="text-align: center;">
               <thead>
                   <th>Motivo</th>
                   <th>Valor</th>
               </thead>
-              <tbody id="details_body">
-                  
-              </tbody>
+              <tbody id="details_body"></tbody>
           </table>
 
           </div>
