--- a/views/owner_home.ejs
+++ b/views/owner_home.ejs
@@ -55,6 +55,33 @@
 
     </div>
 
+    <!-- Trucks Modal -->
+    <div class="modal fade" id="details" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content"  style="border-radius: 25px;">
+          <div class="modal-header">
+            <h5 class="modal-title"" style="text-align: left;" id="details_title"><strong>Detalle</strong></h5>
+          </div>
+          <div class="modal-body" style="text-align: left;">
+            <h6 id="value"></h6>
+            <h6 id="gain"></h6>
+            <h6 style="text-align: center;"><strong>Gastos</strong></h6>
+            <table class="table table-responsive" style="text-align: center;">
+              <thead>
+                  <th>Motivo</th>
+                  <th>Valor</th>
+              </thead>
+              <tbody id="details_body"></tbody>
+          </table>
+
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="navbar-custom" style="color: white;text-align: center;border-radius: 25px;" data-bs-dismiss="modal" aria-label="Close">Volver</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <!-- Travels Modal -->
     <div class="modal fade" id="details" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
       <div class="modal-dialog modal-dialog-centered">
@@ -91,7 +118,7 @@
             <path fill="white" d="M15,14C12.33,14 7,15.33 7,18V20H23V18C23,15.33 17.67,14 15,14M6,10V7H4V10H1V12H4V15H6V12H9V10M15,12A4,4 0 0,0 19,8A4,4 0 0,0 15,4A4,4 0 0,0 11,8A4,4 0 0,0 15,12Z" />
           </svg>
         </div>
-        <div id="docs" class="minifab op1" style="cursor: pointer;">
+        <div id="docs" class="minifab op1" style="cursor: pointer;" data-bs-toggle="modal" data-bs-target="#details">
           <svg class="minifabIcon" viewBox="0 0 24 24">
             <path fill="white" d="M18,18.5A1.5,1.5 0 0,1 16.5,17A1.5,1.5 0 0,1 18,15.5A1.5,1.5 0 0,1 19.5,17A1.5,1.5 0 0,1 18,18.5M19.5,9.5L21.46,12H17V9.5M6,18.5A1.5,1.5 0 0,1 4.5,17A1.5,1.5 0 0,1 6,15.5A1.5,1.5 0 0,1 7.5,17A1.5,1.5 0 0,1 6,18.5M20,8H17V4H3C1.89,4 1,4.89 1,6V17H3A3,3 0 0,0 6,20A3,3 0 0,0 9,17H15A3,3 0 0,0 18,20A3,3 0 0,0 21,17H23V12L20,8Z" />
           </svg>
