--- a/views/owner_home.ejs
+++ b/views/owner_home.ejs
@@ -90,8 +90,40 @@
             <h5 class="modal-title"" style="text-align: left;" id="details_title"><strong>Nuevo vehículo</strong></h5>
           </div>
           <div class="modal-body" style="text-align: left;">
-          
-            
+          <!-- Placa Mrca Modelo Conductor-->
+            <form class="row g-2 needs-validation" style="text-align: left;" method="POST" action="/" novalidate>
+              <div>
+                <label for="plate" class="form-label">Placa</label>
+                <input type="text" class="form-control" name="plate" id="plate" required>
+                <div class="invalid-feedback">
+                  Ingresa una placa
+                </div>
+              </div>
+              <div>
+                <label for="brand" class="form-label">Marca</label>
+                <input type="text" class="form-control" name="brand" id="brand" required>
+                <div class="invalid-feedback">
+                  Ingresa la marca
+                </div>
+              </div>
+              <div>
+                <label for="model" class="form-label">Modelo</label>
+                <input type="text" class="form-control" name="model" id="model" required>
+                <div class="invalid-feedback">
+                  Ingresa el modelo
+                </div>
+              </div>
+              <div>
+                <label for="driver" class="form-label">Conductor</label>
+                <input type="text" class="form-control" name="driver" id="driver" required>
+                <div class="invalid-feedback">
+                  Ingresa el conductor
+                </div>
+              </div>
+              <div class="col-12" style="text-align: center;">
+                <button class="btn btn-primary navbar-custom" style="border-radius: 25px;" type="submit">Agregar</button>
+              </div>
+            </form>
 
           </div>
         </div>
