Update Truck page title

--- a/views/truck.ejs
+++ b/views/truck.ejs
@@ -7,7 +7,7 @@
     <%- include('./templates/full_navbar')%>
     
     <div class="row justify-content-center">
-        <h1>Vehiculos</h1>
+        <h1>Camiones</h1>
         
         <div class="col-auto">
 
