Minor style changes

--- a/views/truck.ejs
+++ b/views/truck.ejs
@@ -29,7 +29,7 @@
                                   <td><%= truck.vehicle.brand %></td>
                                   <td><%= truck.vehicle.model %></td>
                                   <td><%= truck.driverName %></td>
-                                  <td><%= truck.vehicle.driverPercentage %></td>
+                                  <td><%= truck.vehicle.driverPercentage %>%</td>
                               </tr>
                           <%})%>
                       </tbody>
