--- a/views/truck.ejs
+++ b/views/truck.ejs
@@ -97,7 +97,7 @@
       <div class="fab"> 
         <div id="docs" class="minifab op1" style="cursor: pointer;" data-bs-toggle="modal" data-bs-target="#truck-modal">
           <svg class="minifabIcon" viewBox="0 0 24 24">
-            <path fill="white" d="M18,18.5A1.5,1.5 0 0,1 16.5,17A1.5,1.5 0 0,1 18,15.5A1.5,1.5 0 0,1 19.5,17A1.5,1.5 0 0,1 18,18.5M19.5,9.5L21.46,12H17V9.5M6,18.5A1.5,1.5 0 0,1 4.5,17A1.5,1.5 0 0,1 6,15.5A1.5,1.5 0 0,1 7.5,17A1.5,1.5 0 0,1 6,18.5M20,8H17V4H3C1.89,4 1,4.89 1,6V17H3A3,3 0 0,0 6,20A3,3 0 0,0 9,17H15A3,3 0 0,0 18,20A3,3 0 0,0 21,17H23V12L20,8Z" />
+            <path fill="currentColor" d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z" />
           </svg>
         </div>
       </div>
