Add delete icon for trucks and drivers

--- a/views/truck.ejs
+++ b/views/truck.ejs
@@ -30,6 +30,11 @@
                                   <td><%= truck.vehicle.model %></td>
                                   <td><%= truck.driverName %></td>
                                   <td><%= truck.vehicle.driverPercentage %>%</td>
+                                  <td>
+                                    <svg style="width:24px;height:24px" viewBox="0 0 24 24">
+                                      <path fill="black" d="M19,4H15.5L14.5,3H9.5L8.5,4H5V6H19M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19Z" />
+                                    </svg>
+                                  </td>
                               </tr>
                           <%})%>
                       </tbody>
@@ -97,7 +102,7 @@
       <div class="fab"> 
         <div id="docs" class="minifab op1" style="cursor: pointer;" data-bs-toggle="modal" data-bs-target="#truck-modal">
           <svg class="minifabIcon" viewBox="0 0 24 24">
-            <path fill="currentColor" d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z" />
+            <path fill="white" d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z" />
           </svg>
         </div>
       </div>
