--- a/views/templates/footer.ejs
+++ b/views/templates/footer.ejs
@@ -4,4 +4,5 @@
     crossorigin="anonymous">
 </script>
 <script src="js/validation.js" type="text/javascript"></script>
+<script src="js/forms_validation.js" type="text/javascript"></script>
 <script src="js/display_data.js" type="text/javascript"></script>
