Add percentage input

--- a/views/truck.ejs
+++ b/views/truck.ejs
@@ -86,6 +86,13 @@
                   Ingresa el conductor
                 </div>
               </div>
+              <div>
+                <label for="percentage" class="form-label">Porcentage</label>
+                <input type="number" class="form-control" name="percentage" id="percentage" maxlength="2" required>
+                <div class="invalid-feedback">
+                  Ingresa el porcentage
+                </div>
+              </div>
               <div class="col-12" style="text-align: center;">
                 <button class="btn btn-primary navbar-custom" style="border-radius: 25px;" type="submit">Agregar</button>
               </div>
