--- a/views/truck.ejs
+++ b/views/truck.ejs
@@ -8,9 +8,9 @@
     
     <div class="row justify-content-center">
         <h1>Camiones</h1>
-        <% if(isTruckWrong) { %>
-          <h6 style="color: red;">Los datos que ingresaste son incorrectos</h6>
-        <%>}<%>
+        <%if(isTruckWrong){%>
+          <h6 style="color: red;">Los datos ingresados son incorrectos</h6>
+        <%}%>
         <div class="col-auto">
 
           <div style="margin-top: 5%">
