--- a/views/driver_home.ejs
+++ b/views/driver_home.ejs
@@ -4,7 +4,7 @@
     <%- include('./templates/header')%>
 </head>
 <body style="text-align: center;">
-    <%- include('./templates/full_navbar')%>
+    <%- include('./templates/basic_navbar')%>
     
     <div class="row justify-content-center">
         <h1>Viajes</h1>
