Get driver travels

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -34,13 +34,13 @@
                             <legend class="col-form-label col-sm-2 pt-0">Usuario</legend>
                             <div class="col-sm-10">
                                 <div class="form-check">
-                                    <input class="form-check-input" type="radio" name="kindUser" value="driver">
+                                    <input class="form-check-input" type="radio" name="kindUser" value="driver" checked>
                                     <label class="form-check-label" for="kind_user">
                                         Conductor
                                     </label>
                                 </div>
                                 <div class="form-check">
-                                    <input class="form-check-input" type="radio" name="kindUser" value="owner" checked>
+                                    <input class="form-check-input" type="radio" name="kindUser" value="owner">
                                     <label class="form-check-label" for="kind_user">
                                         Dueño
                                     </label>
