Show driver travel details

--- a/views/driver_home.ejs
+++ b/views/driver_home.ejs
@@ -41,6 +41,7 @@
                                   <td style="display: none;">$<%= fullTravel.travel.details.maintenance %></td>
                                   <td style="display: none;">$<%= fullTravel.travel.details.load %></td>
                                   <td style="display: none;">$<%= fullTravel.travel.details.unload %></td>
+                                  <td style="display: none;">$<%= fullTravel.travel.details.driver %></td>
                               </tr>
                           <%})%>
                       </tbody>
