--- a/views/driver_home.ejs
+++ b/views/driver_home.ejs
@@ -82,6 +82,23 @@
       </div>
     </div>
 
+    <!-- New Travel Modal -->
+    <div class="modal fade" id="new_travel" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content"  style="border-radius: 25px;">
+          <div class="modal-header">
+            <h5 class="modal-title"" style="text-align: left;" id="details_title"><strong>Nuevo viaje</strong></h5>
+          </div>
+          <div class="modal-body" style="text-align: left;">
+            
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="navbar-custom" style="color: white;text-align: center;border-radius: 25px;" data-bs-dismiss="modal" aria-label="Close">Volver</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <%- include('./templates/footer')%>
 </body>
 </html>
