--- a/views/driver_home.ejs
+++ b/views/driver_home.ejs
@@ -99,6 +99,17 @@
       </div>
     </div>
 
+    <!-- FAB -->
+
+    <div class="mainopShadow"></div>
+      <div class="fab"> 
+        <div id="docs" class="minifab op1" style="cursor: pointer;" data-bs-toggle="modal" data-bs-target="#new_travel">
+          <svg class="minifabIcon" viewBox="0 0 24 24">
+            <path fill="white" d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z" />
+          </svg>
+        </div>
+      </div>
+
     <%- include('./templates/footer')%>
 </body>
 </html>
