--- a/views/driver_home.ejs
+++ b/views/driver_home.ejs
@@ -8,9 +8,12 @@
     
     <div class="row justify-content-center">
         <h1>Viajes</h1>
-        
-        <div class="col-auto">
+        <%if(isTravelkWrong){%>
+          <h6 style="color: red;">La placa no coincide</h6>
+        <%}%>
 
+        <div class="col-auto">
+          
           <div style="margin-top: 5%">
             <div class="card-body">
               <%if(travels.length){%>
@@ -91,7 +94,7 @@
           </div>
           <div class="modal-body" style="text-align: left;">
             
-            <form class="row g-2 needs-validation" id="new-travel-form" style="text-align: left;" method="POST" action="/add_truck" onsubmit="return validateTravelForm()" novalidate>
+            <form class="row g-2 needs-validation" id="new-travel-form" style="text-align: left;" method="POST" action="/add_travel" onsubmit="return validateTravelForm()" novalidate>
               <div>
                 <label for="plate" class="form-label">Placa</label>
                 <input type="text" class="form-control" name="plate" id="plate" required>
