--- a/views/driver_home.ejs
+++ b/views/driver_home.ejs
@@ -8,7 +8,7 @@
     
     <div class="row justify-content-center">
         <h1>Viajes</h1>
-        <%if(isTravelkWrong){%>
+        <%if(isTravelWrong){%>
           <h6 style="color: red;">La placa no coincide</h6>
         <%}%>
 
