--- a/views/templates/footer.ejs
+++ b/views/templates/footer.ejs
@@ -6,3 +6,4 @@
 <script src="js/validation.js" type="text/javascript"></script>
 <script src="js/forms_validation.js" type="text/javascript"></script>
 <script src="js/display_data.js" type="text/javascript"></script>
+<script src="js/remove_data.js" type="text/javascript"></script>
